--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js --config ormconfig.ts"
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js --config src/infra/typeorm/ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
