chore: update .env.exemple

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ JWT_SECRET_KEY=
 # Shopify variables
 SHOPIFY_API_KEY=
 SHOPIFY_API_PASSWORD=
-SHOPIFY_BASE_URL=send4-avaliacao.myshopify.com/admin/api/2020-01/products
+SHOPIFY_BASE_URL=
